Fix overflow on the reading page

--- a/assets/css/books.scss
+++ b/assets/css/books.scss
@@ -90,7 +90,6 @@
 .books-bottom-material {
     margin-left: auto;
     margin-right: auto;
-    max-width: 100rem;
+    max-width: 60rem;
     padding: 1rem;
-    width: 100%;
 }
